# libdnxpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: config.cmake.in
compiler/: CMakeLists.txt  README.md
compiler/src/: Bytecode.cpp  Translation.cpp  main.cpp
include/diannex/: DxData.hpp  DxInstructions.hpp  DxInterpreter.hpp  DxValue.hpp  common.hpp  exceptions.hpp  models.hpp  utils.hpp
include/diannex/internal/: DxValueConcepts.hpp
include/diannex/utils/: BinaryReader.hpp  DxStack.hpp  generator.hpp
sample/: CMakeLists.txt
sample/data/: main.dx
sample/src/: Game.cpp  Game.hpp  main.cpp
src/: DxData.cpp  DxInterpreter.cpp  DxInterpreterImpl.cpp  DxValue.cpp
src/internal/: DxDefinitionInstance.cpp
src/utils/: BinaryReader.cpp
tests/: CMakeLists.txt
tests/data/: sample.dxb
tests/src/: main.cpp
